Thymeleaf 레이아웃과 부트스트랩 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=azure1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+#Thymeleaf \uC124\uC815
+spring.thymeleaf.cache=false
