--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-	id 'org.springframework.boot' version '2.6.3'
+	id 'org.springframework.boot' version '2.5.9'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
 
 group = 'com.azurealstn'
@@ -24,9 +25,30 @@ dependencies {
 	implementation 'org.mariadb.jdbc:mariadb-java-client' //MariaDB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //JPA
 	implementation 'org.springframework.boot:spring-boot-devtools' //Devtools
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time' //Date
+	implementation 'com.querydsl:querydsl-jpa'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+def querydslDir = "$buildDir/generated/querydsl"
+
+querydsl {
+	jpa = true
+	querydslSourcesDir = querydslDir
+}
+
+sourceSets {
+	main.java.srcDir querydslDir
+}
+
+configurations {
+	querydsl.extendsFrom compileClasspath
+}
+
+compileQuerydsl {
+	options.annotationProcessorPath = configurations.querydsl
 }
